# rust_template

./: Cargo.toml  README.md  deny.toml
.github/workflows/: checks.yml
src/: lib.rs  main.rs
